msm: 8084: Enable MHI on APQ8084
The Modem Host Interface (MHI) enables an MDM device to communicate
with a host over a PCI Express interconnect.

Change-Id: I4f855126e69fd458ab58a8c2da1b0a212c820c7e
Signed-off-by: Yan He <yanhe@codeaurora.org>
(cherry picked from commit edc503aa5b6e1146b21cb649060878af71cfdd34)

--- a/arch/arm/configs/apq8084-perf_defconfig
+++ b/arch/arm/configs/apq8084-perf_defconfig
@@ -40,6 +40,7 @@ CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_CPU_HAS_L2_PMU=y
 CONFIG_MSM_SMD=y
+CONFIG_MHI_CORE=y
 CONFIG_MSM_PCIE=y
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
